welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: illegal start of simple expression
  } while(!)
           ^ColumnByColumn:11: error: ')' expected but '}' found.
} 
^